--- a/ToDoApp/Views/Home/Index.cshtml
+++ b/ToDoApp/Views/Home/Index.cshtml
@@ -6,10 +6,26 @@
             <div class="pull-right actions">
                 <a href="#" class="btn btn-success" data-toggle="modal" data-target="#createCategory">Opret Kategori</a>
             </div>
+            <div class="pull-right search">
+                <div class="input-group">
+                    
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-addon search-addon">
+                        <a class="glyphicon glyphicon-search searchTask" title="Søg">
+                            @*<span class="" aria-hidden="true"></span>*@
+                        </a>
+                    </span>
+                    <span class="input-group-addon refresh-addon">
+                        <a class="glyphicon glyphicon-refresh refreshView" title="Vis alle kategorier">
+                            @*<span class="" aria-hidden="true"></span>*@
+                        </a>
+                    </span>
+                </div><!-- /input-group -->
+            </div>
         </header>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12 todoList">
         <div class="columns">
             <!-- Container til alle Kategorier -->
             <div class="columns-container">
