--- a/ToDoApp/Content/css/style.css
+++ b/ToDoApp/Content/css/style.css
@@ -4,7 +4,12 @@ html, body {
     margin: 0;
     padding: 0;
 }
-
+.container.body-content {
+    width:85%;
+}
+.todoList {
+    padding:0 4%;
+}
 .main-header {
     margin-top: 20px;
 }
@@ -12,6 +17,59 @@ html, body {
     .main-header .actions {
         margin-top: 30px;
     }
+
+    .main-header .search {
+        margin-right: 15px;
+        margin-top: 30px;
+        width: 30%;
+    }
+
+        .main-header .search input ~ .input-group-addon {
+            color: #2196f3;
+            box-shadow: inset 0 -1px 0 #dddddd;
+        }
+
+        .main-header .search input:focus ~ .input-group-addon a {
+                text-shadow: 1px 1px 2px rgba(0,0,0,.3);
+        }
+        .main-header .search input:focus ~ .search-addon {
+            color: #dddddd;
+            box-shadow: inset 0 -40px 0 #2196f3;
+        }
+
+        .main-header .search input:focus ~ .refresh-addon {
+            box-shadow: inset 0 -40px 0 #dddddd;
+        }
+
+        .main-header .search .input-group-addon {
+            padding: 0;
+            border: 0;
+            font-size: 20px;
+            border-radius: 0;
+            transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        }
+
+            .main-header .search .input-group-addon a {
+                color: inherit;
+                padding: 6px 16px;
+                cursor: pointer;
+                text-decoration:none;
+                opacity:.8;
+            }
+
+            .main-header .search input ~ .input-group-addon:hover a {
+                opacity:1;
+                text-shadow: 1px 1px 3px rgba(0,0,0,.5);
+            }
+        .main-header .search .search-addon:hover {
+            /*color: #dddddd;
+            box-shadow: inset 0 -40px 0 #2196f3;*/
+            box-shadow: inset 0 -40px 0 #dddddd;
+        }
+
+        .main-header .search .refresh-addon:hover {
+            box-shadow: inset 0 -40px 0 #dddddd;
+        }
 
 .columns {
     white-space: nowrap;
@@ -75,7 +133,7 @@ html, body {
             .columns-container section .category a.delCat {
                 cursor: pointer;
                 font-size: 25px;
-                line-height:25px;
+                line-height: 25px;
                 color: #e51c23;
                 opacity: 0;
                 position: absolute;
